# MCP-Server

./: README.md  llm.py  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  customisation.md
examples/: run_client.py  run_server.py
src/fastmcp_template/: __init__.py  client.py  config.py  llm.py  server.py
tests/: conftest.py  test_client.py  test_llm.py  test_server.py
